Fix "yesterday" activity header, better header spacing, CreateEvent.

--- a/assets/_data/index/style.css
+++ b/assets/_data/index/style.css
@@ -25,6 +25,9 @@ div.activity {
 	color: #bbb;
 	margin-bottom: 6px;
 }
+.activity div.events-header:not(:first-child) {
+	margin-top: 30px;
+}
 .activity div.event {
 	padding-top: 16px;
 	padding-bottom: 16px;
